[package]
name = "mqtt-channel-client"
description = "MQTT client that communicates over Tokio channels"
version = "0.4.0"
edition = "2021"

license = "MIT"
readme = "README.md"
homepage = "https://github.com/DanNixon/mqtt-channel-client-rs"
repository = "https://github.com/DanNixon/mqtt-channel-client-rs"

[features]
metrics = ["dep:prometheus-client"]

[[example]]
name = "demo"

[[example]]
name = "metrics"
required-features = ["metrics"]

[[example]]
name = "client_config"
required-features = ["metrics"]

[dependencies]
derive_builder = "0.12"
log = "0.4"
paho-mqtt = "0.12"
prometheus-client = { version = "0.19.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.24", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.24", features = ["macros", "signal"] }
